--- a/config
+++ b/config
@@ -35,7 +35,7 @@
     "pulseaudio": {
         "format": "{volume}% {icon} ",
         "format-bluetooth": "{volume}% {icon} {format_source}",
-        "format-bluetooth-muted": " {icon} {format_source}",
+        "format-bluetooth-muted": " {icon} {format_source}",
         "format-muted": "0% {icon} ",
         "format-source": "{volume}% ",
         "format-source-muted": "",
@@ -75,6 +75,6 @@
         "critical-threshold": 80,
         "format-critical": "{icon} {temperatureC} °C",
         "format": "{icon} {temperatureC} °C",
-        "format-icons": ["", "", ""]
+        "format-icons": ["", "", "󰈸"]
     },
 }
