--- a/config
+++ b/config
@@ -1,30 +1,20 @@
 {
     "layer": "top",
     "position": "top",
-    "height": 24,
-    "width": 1880,
+    "height": 20,
+    "width": 1920,
     "spacing": 4,
 
-    "modules-left": ["hyprland/workspaces", "wlr/taskbar"],
+    "modules-left": ["hyprland/workspaces"],
     "modules-center": ["custom/clock", "keyboard-state"],
     "modules-right": ["network", "cpu", "temperature", "memory", "pulseaudio"],
 
     "network": {
-        "format-wifi": "{essid} ({signalStrength}%) ",
-        "format-ethernet": "{ifname} ",
-        "format-disconnected": "", 
+        "format-wifi": "  ({signalStrength}%) {essid}",
+        "format-ethernet": "  {ifname}",
+        "format-disconnected": "  ",
         "max-length": 50,
         "on-click": "kitty -e 'nmtui'"
-    },
-
-    "wlr/taskbar": {
-        "format": "{icon}",
-        "icon-size": 20,
-        "icon-theme": "Star",
-        "tooltip-format": "{title}",
-        "on-click": "minimize",
-        "on-click-middle": "close",
-        "on-click-right": "activate"
     },
 
     "custom/clock": {
@@ -33,12 +23,7 @@
     },
 
     "pulseaudio": {
-        "format": "{volume}% {icon} ",
-        "format-bluetooth": "{volume}% {icon} {format_source}",
-        "format-bluetooth-muted": " {icon} {format_source}",
-        "format-muted": "0% {icon} ",
-        "format-source": "{volume}% ",
-        "format-source-muted": "",
+        "format": "{icon}  {volume}%",
         "format-icons": {
             "headphone": "",
             "hands-free": "",
@@ -54,7 +39,7 @@
     "keyboard-state": {
         "numlock": true,
         "capslock": true,
-        "format": "{name} {icon}  ",
+        "format": "{icon}  {name}",
         "format-icons": {
             "locked": "",
             "unlocked": ""
@@ -62,7 +47,7 @@
     },
 
     "cpu": {
-        "format": "  {usage}%",
+        "format": "  {usage}%"
     },
 
     "memory": {
@@ -73,8 +58,8 @@
         "thermal-zone": 2,
         "hwmon-path": "/sys/class/hwmon/hwmon1/temp1_input",
         "critical-threshold": 80,
-        "format-critical": "{icon} {temperatureC} °C",
-        "format": "{icon} {temperatureC} °C",
+        "format-critical": "{icon}  {temperatureC} °C",
+        "format": "{icon}  {temperatureC} °C",
         "format-icons": ["", "", "󰈸"]
-    },
+    }
 }
